# RustRaytracer

./: .gitignore  Cargo.toml
benches/: intersection_ray_box.rs  intersection_ray_face.rs
src/: camera.rs  face.rs  intersection.rs  lib.rs  main.rs  ray.rs  scene.rs  surface.rs  util.rs
src/algebra/: onb.rs
src/algrebra/: mod.rs  onb.rs
src/camera/: camera.rs  mod.rs  orthographic.rs  perspective.rs
src/light/: light.rs  mod.rs
src/material/: light.rs  material.rs  mod.rs  phong.rs  simple.rs
src/objects/: _box.rs  face.rs  mod.rs  object.rs  traits.rs
src/raytracer/: mod.rs  sampler.rs  simple.rs
